# tinywm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh  xinitrc
inc/: aux.h  utils.hpp  winm.h  xcb.hpp
src/: aux.cpp  winm.cpp
